--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 "aviso":"Aviso",
 
-"mensagem":"INSCREVA-SE PARA MAIS MOD MENUS ATUALIZADOS!\n\nSei que GodsTeam está dando erro ao abrir, problema já foi resolvido. espere pela versão v15 no dia 17/06/2022 as 11:30 no canal!\n\nO código de desbanir conta está no site logo após clicar na função.",
+"mensagem":"INSCREVA-SE PARA MAIS MOD MENUS ATUALIZADOS!",
 
 "ok":"ok",
 
