--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 "textgods":"GodsTeam 2.0",
 
-"datacomprou":"08/06/2022",
+"datacomprou":"17/06/2022",
 
-"vencimento":"11/06/2022",
+"vencimento":"19/06/2022 juro",
 
 "funcoes":"----------AIMBOT----------",
 
