--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 {
 
-"versao":"1.0",
+"versao":"2.0",
 
 "aviso":"Aviso",
 
-"mensagem":"INSCREVA-SE PARA MAIS MOD MENUS ATUALIZADOS!",
+"mensagem":"NOVA ATUALIZAÇÃO, ATUALIZE PARA A V16 PARA CONTINUAR USANDO!!",
 
 "ok":"ok",
 
@@ -16,11 +16,11 @@
 
 "criador":"Criado Por Jato v1.90.X",
 
-"link":"https://youtube.com/channel/UC9fZAqyC2rtrAWMZ_2nrmqQ",
+"link":"https://youtu.be/hjR2C4JZ43w",
 
-"link2":"https://youtube.com/channel/UC9fZAqyC2rtrAWMZ_2nrmqQ",
+"link2":"https://youtu.be/hjR2C4JZ43w",
 
-"linkagl":"https://youtube.com/channel/UC9fZAqyC2rtrAWMZ_2nrmqQ",
+"linkagl":"https://youtu.be/hjR2C4JZ43w",
 
 "linkmeuvideo":"https://www.apkprofissa.online/p/investimento-seguro-2022-texto-para.html",
 
