--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 "criador":"Criado Por Jato v1.90.X",
 
-"link":"https://youtu.be/hjR2C4JZ43w",
+"link":"https://youtu.be/UpQ_poGcLW4",
 
-"link2":"https://youtu.be/hjR2C4JZ43w",
+"link2":"https://youtu.be/UpQ_poGcLW4",
 
-"linkagl":"https://youtu.be/hjR2C4JZ43w",
+"linkagl":"https://youtu.be/UpQ_poGcLW4",
 
 "linkmeuvideo":"https://www.apkprofissa.online/p/investimento-seguro-2022-texto-para.html",
 
